work with soul